# followbot_ros

./: .gitignore  followbot_rviz.rviz  readme.md
LIO-SAM/: Dockerfile
LIO-SAM/config/: params.yaml  robot.urdf.xacro
LIO-SAM/launch/: run.launch.py
LIO-SAM/src/: imuPreintegration.cpp  mapOptmization.cpp
Traversability/: CMakeLists.txt  README.md  package.xml
Traversability/include/: traversabilityGrid.h
Traversability/launch/: traversability_launch.py
Traversability/rviz/: traversability_ view.rviz
Traversability/src/: traversabilityGrid.cpp  traversability_node.cpp
apriltag_navigation/: package.xml  setup.py
apriltag_navigation/apriltag_navigation/: apriltag_navigation.py
apriltag_navigation/launch/: apriltag_navigation.launch.py
bot_bringup/: package.xml  setup.py
bot_bringup/bot_bringup/: mock_battery.py
bot_bringup/launch/: bot_bringup.launch.py  followbot_lidarslam.launch.py  followbot_lidarslam_bringup.launch.py  followbot_traversability.launch.py  followbot_traversability_bringup.launch.py
bot_bt_py/: package.xml  setup.cfg  setup.py
bot_bt_py/bot_bt_py/: apriltag_follower.py  behaviours.py  bot_bt_node.py  gps_navigator.py  log_inference.py  log_publisher.py  mode_pub.py  pid_controller.py  utils.py
bot_controller/config/: bot_controller.yaml  bot_controller_ground_truth.yaml
bot_controller/launch/: controller.launch.py
bot_description/: CMakeLists.txt  package.xml
bot_description/config/: lidarslam_baylands.yaml  lio_sam_baylands_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  traversability_baylands.yaml
bot_description/launch/: gazebo.launch.py  gps.launch.py
bot_description/models/rubicon/materials/scripts/: model.material
bot_description/rviz/: display.rviz  gps.rviz
bot_description/src/: pointcloud_transform.cpp
bot_description/urdf/: bot.urdf.xacro
bot_description/worlds/: apriltag.world  baylands.world  collapsed.world  construction.world  empty.world  empty_org.world  harmonic.world  levels.world  room_with_walls.world  rubicon.world  small_house.world  small_warehouse.world  test_new.world
bot_gps/: package.xml  setup.cfg  setup.py
bot_gps/bot_gps/: gps_home.py  gps_waypoint_follower.py
bot_gps/launch/: gps.launch.py
bot_hri/: package.xml  setup.cfg  setup.py
bot_hri/bot_hri/: apriltag_conf.py  bt.py  nav_conf.py  rule_engine.py  sensor_conf.py
bot_hri/launch/: rule_engine.launch.py
bot_localization/: CMakeLists.txt  package.xml
bot_localization/bot_localization/: imu_republisher.py
bot_localization/config/: ekf.yaml
bot_localization/launch/: bot_localization.launch.py
bot_manager/: package.xml  setup.cfg  setup.py
bot_manager/bot_manager/: mode_manager.py
bot_modes/: package.xml  setup.cfg  setup.py
bot_modes/bot_modes/: follow_node.py  gps_waypoint_node.py  return_node.py
bot_modes/launch/: follow.launch.py  gps_waypoints.launch.py  return.launch.py
bot_msgs/: CMakeLists.txt  package.xml
bot_msgs/srv/: GPSHome.srv  SetMode.srv
bot_terrain_follower/: README.md  package.xml  setup.cfg  setup.py
bot_terrain_follower/bot_terrain_follower/: __init__.py  capability_aware_follower.py  demo_metrics_logger.py  human_pose_publisher.py  naive_follower.py  robot_ground_truth_publisher.py
bot_terrain_follower/config/: follower.yaml  traversability.yaml
bot_terrain_follower/launch/: baseline_follow_demo.launch.py  capability_follow_demo.launch.py
bot_terrain_follower/resource/: bot_terrain_follower
bot_terrain_follower/test/: test_copyright.py
bot_terrain_mapping/: CMakeLists.txt  package.xml
bot_terrain_mapping/launch/: terrain_mapping.launch.py
bot_terrain_mapping/src/: elevation_mapper.cpp
bot_tests/: package.xml  setup.cfg  setup.py
bot_tests/bot_tests/: object_detector_node.py
bot_tests/launch/: object_detector_node.launch.py
bot_vision/: setup.py
bot_vision/bot_vision/: adv_detection.py  basic_detection.py  drone_nav.py  inter_detection.py  lidar_time.py
gazebo-ros-actor-plugin/: CMakeLists.txt  Dockerfile  README.md  package.xml
gazebo-ros-actor-plugin/config/worlds/: baylands.world  move_actor.world
gazebo-ros-actor-plugin/docker_scripts/: bashing_container.sh  launch_container.sh  stop_container.sh
gazebo-ros-actor-plugin/include/gazebo_ros_actor_plugin/: gazebo_ros_actor_command.h
gazebo-ros-actor-plugin/launch/: sim.launch.py
gazebo-ros-actor-plugin/scripts/: path_publisher.py
gazebo-ros-actor-plugin/src/: gazebo_ros_actor_command.cpp
human_detector/: .gitignore  .pre-commit-config.yaml  python_linter.flake8
human_detector/.devcontainer/: Dockerfile  devcontainer.json
human_detector/.github/workflows/: build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_jazzy.yaml  build_and_test_rolling.yaml  linters.yaml
human_detector/human_detector/: package.xml
human_detector/human_detector/human_detector/: human_detector.py  human_detector_parameters.yaml
human_detector/human_detector/launch/: human_detector.launch.py
lidarslam_ros2/: .gitignore  .gitmodules  CHANGELOG.md  README.md  mkdocs.yml  plan.md
lidarslam_ros2/.github/workflows/: main.yml
lidarslam_ros2/docs/: awsim-autonomous-driving-tutorial.md  benchmarking.md  comparison.md  workflows.md
lidarslam_ros2/graph_based_slam/: CMakeLists.txt
lidarslam_ros2/graph_based_slam/include/graph_based_slam/: graph_based_slam_component.h
lidarslam_ros2/graph_based_slam/param/: graphbasedslam.yaml
lidarslam_ros2/graph_based_slam/src/: graph_based_slam_component.cpp
lidarslam_ros2/graph_based_slam/test/: test_benchmark_reporting_tools.py  test_docs_entrypoints.py  test_place_recognition_report.py
lidarslam_ros2/lidarslam/param/: lidarslam.yaml  lidarslam_mid360_rko_graph.yaml
lidarslam_ros2/lidarslam/rviz/: mapping.rviz
lidarslam_ros2/scripts/: benchmark_summary.py  generate_place_recognition_report.py  odom_to_tum.py  path_to_tum.py  run_release_readiness_checks.sh  run_rko_lio_graph_autoware_dogfood.sh  simple_lanelet2_generator.py  write_aligned_trajectory_metrics.py
pcd2pgm/config/: pcd2pgm.yaml
