<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_ros_actor_plugin</name>
  <version>1.0.0</version>
  <description>Gazebo Fortress plugin to control actors using either position or velocity commands via ROS2 Humble</description>
  <maintainer email="animesh@blackcoffeerobotics.com">Animesh Singhal</maintainer>
  <maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ignition-gazebo6</depend>
  <depend>ignition-plugin1</depend>
  <depend>ignition-common4</depend>
  <depend>ignition-math6</depend>
  <depend>ignition-transport11</depend>
  <depend>ignition-msgs8</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
