<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_detector</name>
  <version>0.1.0</version>
  <description>Human detector package</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>generate_parameter_library</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python3-mediapipe-pip</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
